removed automatic validation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>Measuring to ensure updates are a success</li>
         <li>And much more!</li>
               </ul>
-        <form>
+        <form novalidate>
           <label for="">Email address</label>
           <span class="error-message hidden">Valid email required</span>
           <input type="email" placeholder="email@company.com">
