--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Newsletter sign-up form with success message</title>
 
   <link rel="stylesheet" href="assets/CSS/styles.css">
-  <script defer src="assets/Javascript/imageChange.js"></script>
+  <!-- <script defer src="assets/Javascript/imageChange.js"></script> -->
   <script defer src="assets/Javascript/validate.js"></script>
 </head>
 <body>
@@ -18,6 +18,7 @@
     <!-- Sign-up form start -->
      <section class="sign-up-window">
       <picture>
+        <source media="(min-width: 700px)" srcset="assets/images/illustration-sign-up-desktop.svg"/>
         <img src="assets/images/illustration-sign-up-mobile.svg" alt="image placeholder">
       </picture>
       <section class="text-content">
